# salary-calc

./: .gitignore  README.md  main.py  pyproject.toml  salary.txt
gpt/: changes.txt  prompt
salary_calc/: main.py  per.py  phi.py  salaries.txt
