[tool.poetry]
name = "salary-calc"
version = "0.1.0"
description = ""
authors = ["nkatshiba <nkatshiba@proton.me>"]
readme = "README.md"
packages = [{include = "salary_calc"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
